tests/error/failLoad.sk
int main() {

img i = load(test_fish.jpeg); /* load parameter needs to be in string format and .png */
return 0;
}